Footer; fixed overlap of content

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,7 @@
+body {
+  padding-bottom: 120px;
+}
+
 img {
   width: 100%;
 }
